# KPCL

./: .gitignore  BUG_claude_code.md  BUG_codex.md  CLAUDE.md  Deviations_claude_code.md  KPCL_KURC_Explainer.md  KPCL_KURC_Implementation_Playbook.md  TODO.md  param_count.txt  pyproject.toml  result_report.md
configs/: config.yaml
configs/aug/: default.yaml
configs/data/: bibtex.yaml  emotions.yaml  mediamill.yaml  scene.yaml  yeast.yaml
configs/experiment/: full.yaml  smoke.yaml  spec_h0.yaml  spec_h1.yaml  sweep_h2.yaml
configs/loss/: cosfn.yaml  dcl.yaml  infonce.yaml  kpcl.yaml  kpcl_kurc.yaml  kurc.yaml  supcon.yaml
configs/model/: kan.yaml  mlp.yaml  mlp_ln.yaml
scripts/: baseline_yeast.py  diag_gridrange.py  regate_h0.py  spec_h0.py
scripts/smoke/: baseline_yeast.py  diag_gridrange.py  kpcl_yeast.py  kurc_yeast.py  regate_h0.py  spec_h0.py  spec_h1.py  sweep_h2.py
scripts/training/: __init__.py  loop.py
src/: __init__.py  train.py
src/data/: __init__.py  augment.py  datasets.py  loader.py  prevalence.py  splits.py
src/experiments/: diag_gridrange.py  spec_h0.py
src/losses/: __init__.py  cosfn.py  dcl.py  infonce.py  kpcl.py  kurc.py  supcon.py
src/metrics/: __init__.py  auroc.py  fn_ranking.py  geometry.py  probe.py
src/models/: __init__.py  encoder.py  heads.py  knots.py  spline_kan.py
src/training/: __init__.py  (+2 more)
tests/: conftest.py  test_cosfn.py  test_data.py  test_dcl.py  test_fn_ranking.py  test_infonce.py  test_kan.py  test_knots.py  test_kpcl.py  test_kurc.py  test_stubs.py  test_supcon.py
utils/: experiment.py  parity.py
(+13 files in other folders)
