[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpcl"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core ML
    "torch>=2.2.0,<3.0",
    "numpy>=1.26.0,<2.2",
    "scipy>=1.13.0",
    # ML utilities
    "scikit-learn>=1.4.0,<1.6",
    # NOTE: scikit-multilearn 0.2.0 (2019) may need manual install from git
    # if PyPI wheel fails on newer sklearn:
    #   pip install git+https://github.com/scikit-multilearn/scikit-multilearn.git
    "scikit-multilearn>=0.2.0",
    "requests>=2.31.0",
    "liac-arff>=2.5.0",
    # Config & experiment management
    "hydra-core>=1.3.2,<2.0",
    "omegaconf>=2.3.0",
    # Data
    "pandas>=2.0.0",
    # Testing
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
